fixed alignment, added Add Unit button

--- a/src/components/views/Dashboard/Units/NewUnit/NewUnit.css
+++ b/src/components/views/Dashboard/Units/NewUnit/NewUnit.css
@@ -1,4 +1,4 @@
 .NewUnit {
   display: grid;
-  grid: auto-flow / 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid: auto-flow / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
