--- a/src/components/views/Dashboard/Units/Units.css
+++ b/src/components/views/Dashboard/Units/Units.css
@@ -1,4 +1,4 @@
 .Units__titles {
   display: grid;
-  grid: auto-flow / 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid: auto-flow / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
